--- a/style.css
+++ b/style.css
@@ -422,3 +422,23 @@ nav{
     font-size: 13px;
 
 }
+
+/* settings-menu */
+.settings-menu{
+    position: absolute;
+    width: 90%;
+    max-width: 350px;
+    height: 500px;
+    background: #fff;
+    box-shadow: 0 0 10px rgba(0,0,0,0.4);
+    border-radius: 4px;
+    overflow: hidden;
+    top: 108%;
+    right: 5%;
+}
+
+.user-profile a{
+    font-size:12px ;
+    color: #1876f2;
+    text-decoration: none;
+}
