--- a/style.css
+++ b/style.css
@@ -4,15 +4,27 @@
     font-family: 'popins', sans-serif;
     box-sizing: border-box;
 }
+:root{
+    --body-color:#efefef;
+    --nav-color: #1876f2;
+    --bg-color: #fff;
+}
+.dark-theme{
+    --body-color:#18191A;
+    --nav-color: #18191A;
+    --bg-color: #18191A;
+}
+
 body{
-    background-color: #efefef;
+    background-color: var(--body-color);
+    transition: background 0.3s;
 }
 
 nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #1876f2;
+    background: var(--nav-color);
     padding: 5px 5%;
     position: sticky;
     top:0;
@@ -90,7 +102,7 @@ nav{
     
 }
 .right-sidebar{
-    background: #fff;
+    background: var(--bg-color);
     flex-basis: 25%;
     position: sticky;
     top: 70px;;
@@ -281,7 +293,7 @@ nav{
 /* write post conatainer  */
 .write-post-container{
     width: 100%;
-    background:#fff;
+    background:var(--bg-color);
     border-radius: 6px;
     padding:20px;
     color: #626262;
@@ -339,7 +351,7 @@ nav{
 /* post-container */
 .post-container{
     width: 100%;
-    background: #fff;
+    background: var(--bg-color);
     border-radius: 6px;
     padding: 20px;
     color: #626262;
@@ -428,17 +440,79 @@ nav{
     position: absolute;
     width: 90%;
     max-width: 350px;
-    height: 500px;
-    background: #fff;
+    background: var(--bg-color);
     box-shadow: 0 0 10px rgba(0,0,0,0.4);
     border-radius: 4px;
     overflow: hidden;
     top: 108%;
     right: 5%;
+    max-height: 0;
+    transition: max-height 0.3s;
+}
+
+.settings-menu-height{
+    max-height: 450px;
 }
 
 .user-profile a{
     font-size:12px ;
     color: #1876f2;
     text-decoration: none;
+}
+
+.settings-menu-inner{
+    padding: 20px;
+}
+.settings-menu hr{
+    border: 0;
+    height: 1px;
+    background: #9a9a9a;
+    margin: 15px 0;
+    
+}
+
+.settings-links{
+    display: flex;
+    align-items: center;
+    margin: 15px 0;
+}
+
+.settings-icon{
+    width: 38px;
+    margin-right:10px;
+    border-radius: 50%;
+}
+.settings-links a{
+    display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: space-between;
+    text-decoration: none;
+    color: #626262;
+
+}
+
+#dark-btn{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background: #ccc;
+    width: 45px;
+    border-radius: 15px;
+    padding: 2px 3px;
+    cursor: pointer;
+    display: flex;
+    transition: 0.5s, background 0.5s;
+}
+#dark-btn span{
+    width: 18px;
+    height: 18px;
+    background: #fff;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+#dark-btn.dark-btn-on{
+     padding-left: 23px;
+     background: #0a0a0a;
 }
